--- a/music-app/package.json
+++ b/music-app/package.json
@@ -10,12 +10,14 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.14.19",
+    "@mui/joy": "^5.0.0-beta.17",
     "@mui/material": "^5.14.19",
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@react-buddy/palette-mui": "^5.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
@@ -24,6 +26,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
