--- a/music-app/package.json
+++ b/music-app/package.json
@@ -21,11 +21,13 @@
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "soundmanager2": "^2.97.20170602",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
