--- a/music-app/package.json
+++ b/music-app/package.json
@@ -25,8 +25,11 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
+    "react-redux": "^9.0.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.0",
+    "redux-devtools-extension": "^2.13.9",
     "soundmanager2": "^2.97.20170602",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
