--- a/music-app/package.json
+++ b/music-app/package.json
@@ -8,12 +8,14 @@
     "@fontsource/montserrat": "^5.0.15",
     "@fontsource/roboto": "^5.0.8",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@hookform/resolvers": "^3.3.2",
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.14.19",
     "@mui/joy": "^5.0.0-beta.17",
     "@mui/material": "^5.14.19",
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@react-buddy/palette-mui": "^5.0.1",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +26,7 @@
     "react-audio-player": "^0.17.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-loading": "^2.0.3",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.18.0",
@@ -32,7 +35,8 @@
     "redux-devtools-extension": "^2.13.9",
     "soundmanager2": "^2.97.20170602",
     "swiper": "^11.0.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
