--- a/music-app/package.json
+++ b/music-app/package.json
@@ -19,10 +19,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "react-anime": "^4.1.1",
     "react-audio-player": "^0.17.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
